--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "siron-syntax",
-  "displayName": "Siron Syntax Highlighting",
+  "displayName": "Siron Syntax Extension",
   "description": "Syntax highlighting for Siron programming language files (.siron) with support for dark themes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "guenzd",
   "author": "Daniel Günzel",
   "license": "MIT",
